Renamed the chapter files to section. Some more rewording of sec1.

--- a/project.tex
+++ b/project.tex
@@ -23,9 +23,9 @@ Software components written in different programming languages can cooperate thr
 \end{abstract}
 
 \input{macros.tex}
-\input{chapter-1.tex}
-\input{chapter-2.tex}
-\input{chapter-3.tex}
+\input{section1.tex}
+\input{section2.tex}
+\input{section3.tex}
 
 \clearpage
 
