Changed the paper title to 'Interoperation for Lazy and Eager Evaluation.'

--- a/project.tex
+++ b/project.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{Interoperation for Incompatible Evaluation Strategies}
+\title{Interoperation for Lazy and Eager Evaluation}
 \author{William Faught}
 \date{October 4, 2010}
 \maketitle
