Wrote the paragraph on adding the third language Haskell.

--- a/section1.tex
+++ b/section1.tex
@@ -4,8 +4,6 @@ The complexities of software interoperation in part engender the proverbial rein
 
 The systems of interoperation presented by Matthews and Findler \cite{matthews07} use call-by-value evaluation strategies that eagerly evaluate expressions. Were a language introduced to their system that uses a call-by-name evaluation strategy that lazily evaluates expressions, interoperation would change the meaning of values converted between the lazy language and the eager ones. For example, since the application of a converted function involves applications in both the outer and inner languages, the argument is subject to both outer and inner evaluations strategies. If the outer language is lazy and the inner language is eager, the argument may be evaluated by the inner language but not the outer language, thereby violating assumptions about the order of evaluation by the outer language and thus changing the meaning of the function. Futhermore, the conversion of a composite type like lists from a lazy language to an eager language may diverge or cause an error, since the outer language will eagerly convert the entire value, and the value may be of infinite size or contain expressions assumed by the inner language to not be immediately evaluated.
 
-Lazy and eager evaluation take opposite approaches: lazy evaluation evaluates expressions needed only by primitive operations, and eager evaluation evaluates all expressions. As such, lazy evaluation evaluates a proper subset of the expressions that eager evaluation does. In other words, the set of lazy evaluation strictness points is a proper subset of that of eager evaluation. The exclusive disjunction between these two sets is the set of incompatible strictness points that may change the meaning of values converted from lazy languages to eager ones. Interoperation must subject guarded expressions of lazy languages in eager languages only to lazy evaluation to .
+Lazy and eager evaluation take opposite approaches: lazy evaluation evaluates expressions needed only by primitive operations, and eager evaluation evaluates all expressions. As such, lazy evaluation evaluates a proper subset of the expressions that eager evaluation does. In other words, the set of lazy evaluation strictness points is a proper subset of that of eager evaluation. The exclusive disjunction between these two sets is the set of incompatible strictness points that may change the meaning of values converted between lazy and eager languages. Interoperation must subject guarded expressions only to the inner evaluation strategy and not the outer. This means introducing a dual notion of values and evaluation contexts to the eager languages to include guarded expressions in these incompatible points. (((EXPLAIN FURTHER)))
 
-Interoperation requires preserving these strictness points for each evaluation strategy, even after a call-by-name value is converted to a call-by-value value. For an expression converted by a guard, if its conversion requires it to be evaluated, then the evaluation must follow the order of evaluation defined by the inner language's evaluation strategy. This means deferring the evaluation of converted call-by-name expressions in these incompatible points using a dual notion of values and evaluation contexts in call-by-value languages that handles both call-by-value values and guarded call-by-name expressions, called \emph{forced} and \emph{unforced} values and evaluation contexts.
-
-It is instructive to discuss these ideas in terms of introduce a third language to that uses an incompatible evaluation strategy: call-by-name. Thus their model is extended with a third language, identical to the ML model except it uses a call-by-name evaluation strategy, and named after Haskell, to which it is more similar than ML.
+Matthews and Findler used simple languages based on ML and Scheme. To explore and resolve interoperation between lazy and eager evaluation, a third language is added that is identical to their ML, except it is lazy instead, and as such is named after Haskell, to which it is more similar.
