Revised the points paragraph in sec1. Moved the last paragraph, Haskell name, to sec2.

--- a/section1.tex
+++ b/section1.tex
@@ -4,6 +4,4 @@ The complexities of software interoperation in part engender the proverbial rein
 
 The systems of interoperation presented by Matthews and Findler \cite{matthews07} use call-by-value evaluation strategies that eagerly evaluate expressions. Were a language introduced to their system that uses a call-by-name evaluation strategy that lazily evaluates expressions, interoperation would change the meaning of values converted between the lazy language and the eager ones. For example, since the application of a converted function involves applications in both the outer and inner languages, the argument is subject to both outer and inner evaluations strategies. If the outer language is lazy and the inner language is eager, the argument may be evaluated by the inner language but not the outer language, thereby violating assumptions about the order of evaluation by the outer language and thus changing the meaning of the function. Futhermore, the conversion of a composite type like lists from a lazy language to an eager language may diverge or cause an error, since the outer language will eagerly convert the entire value, and the value may be of infinite size or contain expressions assumed by the inner language to not be immediately evaluated.
 
-Lazy and eager evaluation take opposite approaches: lazy evaluation evaluates expressions needed only by primitive operations, and eager evaluation evaluates all expressions. As such, lazy evaluation evaluates a proper subset of the expressions that eager evaluation does. In other words, the set of lazy evaluation strictness points is a proper subset of that of eager evaluation. The exclusive disjunction between these two sets is the set of incompatible strictness points that may change the meaning of values converted between lazy and eager languages. Interoperation must subject guarded expressions only to the inner evaluation strategy and not the outer. This means introducing a dual notion of values and evaluation contexts to the eager languages to include guarded expressions in these incompatible points. (((EXPLAIN FURTHER)))
-
-Matthews and Findler used simple languages based on ML and Scheme. To explore and resolve interoperation between lazy and eager evaluation, a third language is added that is identical to their ML, except it is lazy instead, and as such is named after Haskell, to which it is more similar.
+Lazy and eager evaluation take opposite approaches: lazy evaluation evaluates expressions for primitive operations as needed, and eager evaluation evaluates all expressions. As such, lazy evaluation evaluates a proper subset of the expressions that eager evaluation does. In other words, the set of lazy evaluation strictness points is a proper subset of that of eager evaluation. The difference between these two sets is the set of incompatible strictness points that may change the meaning of values converted from lazy languages to eager ones. Where guarded expressions of lazy languages occur at these points, the original lazy evaluation must be followed, and the guards not evaluated. This requires introducing a dual notion of values, where \emph{forced} values and evaluation contexts force the evaluation of lazy guards, and \emph{unforced} values and evaluation contexts prevent their evaluation. Unforced values and evaluation contexts appear at incompatible strictness points, and forced values and evaluation contexts appear everywhere else.
