Reworded sec1 intro paragraph.

--- a/section1.tex
+++ b/section1.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-The complexities of software interoperation in part engender the proverbial reinvention of the wheel. Programmers forgo existing solutions to problems in other programming languages where interoperation proves too cumbersome; they remake solutions, rather than reuse them. To unburden programmers to facilitate reuse, interoperation must resolve disparate programming language features transparently at the boundaries between programming languages. To address part of this problem, this paper presents a model of computation that resolves interoperation between lazy and eager evaluation strategies.
+The complexities of software interoperation in part engender the proverbial reinvention of the wheel. Programmers forgo existing solutions to problems in other programming languages where interoperation proves too cumbersome; they remake solutions, rather than reuse them. To unburden programmers to facilitate reuse, interoperation must resolve incompatible programming language features transparently at the boundaries between programming languages. To address part of this problem, this paper presents interoperation in a model of computation that resolves lazy and eager evaluation strategies.
 
 The systems of interoperation presented by Matthews and Findler \cite{matthews07} use call-by-value evaluation strategies that eagerly evaluate expressions. Were a language introduced to their system that uses a call-by-name evaluation strategy that lazily evaluates expressions, interoperation would change the meaning of values converted between the lazy language and the eager ones. For example, since the application of a converted function involves applications in both the outer and inner languages, the argument is subject to both outer and inner evaluations strategies. If the outer language is lazy and the inner language is eager, the argument may be evaluated by the inner language but not the outer language, thereby violating assumptions about the order of evaluation by the outer language and thus changing the meaning of the function. Futhermore, the conversion of a composite type like lists from a lazy language to an eager language may diverge or cause an error, since the outer language will eagerly convert the entire value, and the value may be of infinite size or contain expressions assumed by the inner language to not be immediately evaluated.
 
