Added a clean Makefile. Finished rewriting sec2.

--- a/figures/unforced.tex
+++ b/figures/unforced.tex
@@ -365,6 +365,6 @@ $zeroes = \expfix{(\expfabss{\varvarh}{\tylist{\tynum}}{\expcons{\expnum{0}}{\va
 }
 & \\
 \end{tabular}
-\caption{Function and list conversions with unforced points.}
+\caption{Haskell argument and list conversions.}
 \label{figunf}
 \end{figure}
