--- a/section2.tex
+++ b/section2.tex
@@ -27,29 +27,21 @@
 \newcommand{\hastype}[1]{has the type #1}
 \newcommand{\havetype}[1]{have the type #1}
 
-(((TODO: SET DIFFERENCE SHOULD BE FOR ONLY SHARED EXP POSITIONS)))
-
 \section{Model of Computation}
 
-The model of computation extends the model presented by Kinghorn \cite{kinghorn07} with a third language identical to the ML model except it uses lazy evaluation, and as such is named after Haskell, to which it is more similar.
+The model of computation extends the model presented by Kinghorn \cite{kinghorn07} with a third language identical to the ML model except it uses lazy evaluation, and as such is named after Haskell, to which it is more similar. Hereafter, the names Haskell, ML, and Scheme refer to their corresponding models in this paper. Lists are added to all three languages. Being lazy, Haskell does not evaluate function arguments or list construction operands. These three points constitute the set of incompatible strictness points between Haskell and ML and Haskell and Scheme. Haskell guards in ML and Scheme must not be evaluated where they occur at these points, but they can be evaluated at all other points.
 
-Concretely, this means that function arguments and list construction operands must not be reduced. Thus evaluation contexts for the ML and Scheme models are made aware of whether Haskell language boundary guards are in these places, and if so, to make them irreducible.
+Haskell guards are considered a special kind of value called an unforced value. Unforced values include both Haskell guards and traditional values, called forced values. Haskell guards that are forced to evaluate become forced values through the conversion of the Haskell value to an ML or Scheme value. As such, all ML and Scheme expressions either reduce to unforced values, cause errors, or diverge. ML and Scheme reduction rules and evaluation contexts use unforced values at the incompatible strictness points to prevent matching, and their evaluation contexts restrict evaluation within Haskell guards at those points.
 
-Since Haskell language boundary guards are forced in some places but not others, they must be considered a value sometimes, but not others. Thus there are two kinds of values: all values, called unforced values, which include imported Haskell expressions, and forced values, which exclude imported Haskell expressions. Unforced values occur in the evaluation contexts and reduction rules where Haskell importations should not be forced, namely function arguments and list construction operands, and forced values occur everywhere else a value is required.
-
-Evaluation contexts are split into two: forced, \varconf, and unforced, \varconu. Only forced evaluation contexts can reduce anything, including Haskell importations, and unforced evaluation contexts restrict where expressions are forced. Where \varconu appears in an evaluation context, any Haskell importation matching that expression is not forced because only \varconf can reduce it.
-
-Since the Haskell and ML models have their own types, type abstractions from one imported into the other cannot be easily converted, because any type the conversion is applied to cannot be substituted into the other language. Instead, and like the importation of parametric polymorphic types into the Scheme model, the lump type is subsituted into the imported type abstraction, and a lump equality relation, (((LUMP EQUALITY REL))) asserts that corresponding parts of the inner and outer types of the importation must be equal, or one of them must be a lump.
+Figure \ref{figunf} illustrates forced and unforced values at work for the cases explained in the introduction. The reductions for lines 1-4 show that the outer Haskell argument $zeroes$ is not forced by the application of the inner Scheme function. The reductions for lines 4-8 show that the conversion of $zeroes$ from Haskell to Scheme did not diverge, despite $zeroes$ being a list of infinite size.
 
 \input{figures/unforced.tex}
 
-\subsection{Notation}
+The interoperation of Haskell and ML posed another problem: the conversion of type abstractions. The application of a converted type abstraction cannot substitute the type argument into the inner language directly, since the inner language has no notion of the types of the outer language. Instead, conversion substitutes lumps in a guard's inner type. The application of a converted type abstraction substitutes the type argument in the guard's outer type. Since the natural embedding \cite{matthews07} requires the guard's outer and inner types to be equal, a new equality relation must be used here that allow lumps in the guard's inner type to match any type.
 
-Symbols that represent grammar non-terminals or relations typically have letter subscripts that specify a model.
+The proof of correctness of this model would be similar to that of Kinghorn \cite{kinghorn07}, mutatis mutandis.
 
-\Thehaskellml have static type systems that use typing environments, written \env, and typing relations, written \jud. Typing judgements for expressions are written \jude{\env}{\jud}{\varexp}{\varty}, where \varexp is bound in \env and has the type \varty. Typing judgements for types are written \judt{\env}{\jud}{\varty} and mean \varty is bound in \env. Extended typing environments are written \envexte{\env}{\varvar}{\varty} for variables and \envextt{\env}{\tyvar} for type variables. Typing environments are omitted where empty. \Thescheme uses a simple type system to ensure no free variables. Every well-typed \scheme expression \hastype{\tytst}. Type substitution within types is written \tysubst{\formvar{x}}{\formvar{y}}{\formvar{z}}, where the type \formvar{y} is substituted for free occurrences of the type variable \formvar{z} in the type \formvar{x}.
-
-Expression and type substitutions within expressions are written like type substitutions within types.
+Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fighmos}, and \ref{fighsos}; ML is presented in figures \ref{figms}, \ref{figmtr}, \ref{figmos}, \ref{figmhos}, and \ref{figmsos}; and Scheme is presented in figures \ref{figss}, \ref{figstr}, \ref{figsos}, \ref{figshos}, and \ref{figsmos}.
 
 \clearpage
 
