--- a/section3.tex
+++ b/section3.tex
@@ -1,7 +1,5 @@
 \section{Conclusion}
 
-Evaluation strategy incompatibilities can be resolved transparently at language boundaries. Where two interoperable languages do not share a strictness point, if an expression crosses from the language without the strictness point to the one with, then the conversion of the expression must be delayed until the value is needed. Otherwise, the expression may diverge or reduce to an error, and thus reduce differently due to the interoperation.
+Lazy and eager evaluation can be resolved transparently at the boundaries between languages with unforced and forced values. This is more convenient than an explicit force operator that programmers must use manually by anticipating which expressions must be forced.
 
-Statically-typed languages with parametric polymorphism can interoperate through lump equality. Normally, expressions have equivalent types on both sides of the language boundary, but in the case of type abstractions, the outer type argument cannot be substituted into the inner language's type abstraction. A lump is substituted into the inner language's type of the guard and the applied to the type abstraction, and the lump equality relation allows for a notion of type equivalence where the substituted lump type can match the outer type instantiated for the outer type variable.
-
-In an interoperable system of $n$ languages, there must be $n * (n - 1)$ language mappings, two for every pair of languages to convert to and from one another. As this model of computation demonstrates, the geometric growth of the interoperation model is almost too much to manage. In general, for a sizable group of languages, this approach of interface bridging is unmaintainable. A better approach is to make language mappings between a language and only one other language that is most similar to it. As long as there is a spanning tree for the graph of languages, the number of languages mappings in the best case is $n - 1$, linear growth.
+The approach this paper used for interoperation between three languages is not scalable. Values from each language can be directly converted to values of the other two languages, requiring $n * (n - 1)$ conversion mappings between the languages. As the number of languages increases, the number of conversion mappings grows geometrically, which is unmaintainable. A better approach would be to make only two conversion mappings per language and chain them together to form a single path between any two languages, which would require only $n - 1$ conversion mappings and grow linearly. Were this done for this model, the number of conversion mappings would be four instead of six.
