--- a/model/syntax.tex
+++ b/model/syntax.tex
@@ -35,7 +35,7 @@
 \end{tabular}
 
 \caption{Syntax names.}
-\label{figsyntax}
+\label{figsyntax1}
 \end{figure}
 
 \begin{figure}[p]
@@ -57,5 +57,5 @@
 \end{tabular}
 
 \caption{Syntax names.}
-\label{figsyntax}
+\label{figsyntax2}
 \end{figure}
