Minor punctuation and wording in some model figures.

--- a/model/syntax.tex
+++ b/model/syntax.tex
@@ -34,7 +34,7 @@
 
 \end{tabular}
 
-\caption{Syntax names.}
+\caption{Syntax names}
 \label{figsyntax1}
 \end{figure}
 
@@ -56,6 +56,6 @@
 
 \end{tabular}
 
-\caption{Syntax names.}
+\caption{Syntax names}
 \label{figsyntax2}
 \end{figure}
