--- a/model/unbrand.tex
+++ b/model/unbrand.tex
@@ -17,6 +17,6 @@
 \tyunbrand{\csbrand{\varbrand}{\vartym}} & $=$ & \vartym \\
 
 \end{tabular}
-\caption{The unbrand function.}
+\caption{Unbrand function}
 \label{figunbrand}
 \end{figure}
