--- a/model/equality.tex
+++ b/model/equality.tex
@@ -14,6 +14,6 @@ $\vartym \eq \tylump$
 
 $\vartyh = \vartym \Rightarrow \vartyh \symlumpeq \vartym$
 
-\caption{The lump equality relation.}
+\caption{Lump equality relation}
 \label{figequality}
 \end{figure}
