Moved the legends to the front of the model. Condensed some model figure descriptions.

--- a/section2.tex
+++ b/section2.tex
@@ -12,7 +12,15 @@ The interoperation of Haskell and ML posed another problem: the conversion of ty
 
 The proof of correctness of this model would be similar to that of Kinghorn \cite{kinghorn07}, mutatis mutandis.
 
-Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fighmos}, and \ref{fighsos}; ML is presented in figures \ref{figms}, \ref{figmtr}, \ref{figmos}, \ref{figmhos}, and \ref{figmsos}; Scheme is presented in figures \ref{figss}, \ref{figstr}, \ref{figsos}, \ref{figshos}, and \ref{figsmos}; the unbrand function is presented in figure \ref{figunbrand}; the lump equality relation is presented in figure \ref{figequality}; and legends of symbol and syntax names are presented in figures \ref{figsymbols}, \ref{figsyntax1}, and \ref{figsyntax2}.
+Legends of symbol and syntax names are presented in figures \ref{figsymbols}-\ref{figsyntax2}; Haskell is presented in figures \ref{fighs}-\ref{fighsos}; ML is presented in figures \ref{figms}-\ref{figmsos}; Scheme is presented in figures \ref{figss}-\ref{figsmos}; the unbrand function is presented in figure \ref{figunbrand}; and the lump equality relation is presented in figure \ref{figequality}.
+
+\clearpage
+
+\input{model/symbols.tex}
+
+\clearpage
+
+\input{model/syntax.tex}
 
 \clearpage
 
@@ -81,13 +89,3 @@ Haskell is presented in figures \ref{fighs}, \ref{fightr}, \ref{fighos}, \ref{fi
 \clearpage
 
 \input{model/equality.tex}
-
-\clearpage
-
-\input{model/symbols.tex}
-
-\clearpage
-
-\input{model/syntax.tex}
-
-\clearpage
