Reworded the forced/unforced explanation in sec2.

--- a/project.tex
+++ b/project.tex
@@ -15,11 +15,11 @@
 
 \title{Interoperation for Lazy and Eager Evaluation}
 \author{William Faught}
-\date{October 19, 2010}
+\date{November 14, 2010}
 \maketitle
 
 \begin{abstract}
-Programmers forgo existing solutions to problems in other programming languages where interoperation proves too cumbersome; they remake solutions, rather than reuse them. To unburden programmers to facilitate reuse, interoperation must resolve incompatible programming language features transparently at the boundaries between languages. To address part of this problem, this paper presents a model of computation that resolves lazy and eager evaluation strategies. Unforced values act as thunks that are used and forced where appropriate by the languages themselves and do not require programmer forethought.
+Programmers forgo existing solutions to problems in other programming languages where interoperation proves too cumbersome; they remake solutions, rather than reuse them. To facilitate reuse, interoperation must resolve incompatible programming language features transparently at the boundaries between languages. To address part of this problem, this paper presents a model of computation that resolves lazy and eager evaluation strategies. Unforced values act as thunks that are used and forced where appropriate by the languages themselves and do not require programmer forethought.
 \end{abstract}
 
 \input{macros.tex}
